--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
-    "@mui/material": "^5.15.17",
+    "@mantine/core": "^7.9.1",
+    "@mantine/hooks": "^7.9.1",
     "@tabler/icons-react": "^3.3.0",
     "next": "14.2.2",
     "react": "^18",
@@ -24,6 +25,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
     "typescript": "^5"
   }
 }
