--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
+    "@mantine/carousel": "^7.9.2",
     "@mantine/core": "^7.9.1",
+    "@mantine/form": "^7.9.2",
     "@mantine/hooks": "^7.9.1",
+    "@mantine/notifications": "^7.9.2",
     "@tabler/icons-react": "^3.3.0",
+    "embla-carousel-react": "^7.1.0",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
