--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev & npx next-video sync -w",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,9 +21,13 @@
     "@tabler/icons-react": "^3.3.0",
     "embla-carousel-react": "^7.1.0",
     "next": "14.2.2",
-    "react": "^18",
-    "react-dom": "^18",
-    "sass": "^1.77.1"
+    "next-video": "^1.0.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
+    "redux": "^5.0.1",
+    "sass": "^1.77.1",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
