--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tabler/icons-react": "^3.3.0",
     "embla-carousel-react": "^7.1.0",
     "next": "14.2.2",
+    "next-video": "^1.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
